--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,7 +4,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <button class="btn btn-outline-success ml-auto"data-toggle="modal" data-target="#login-modal">Login</button>
+    <button class="btn btn-outline-success ml-auto" data-toggle="modal" data-target="#login-modal">Login</button>
 </nav>
 <div class="modal" tabindex="-1" role="dialog" id="login-modal">
   <div class="modal-dialog">
@@ -18,12 +18,12 @@
       <div class="modal-body">
         <form id="login-form">
             <div class="form-group">
-                <input id="log-in-email" class="form-control" type="email" placeholder="Email" aria-label="log-in-email">
+                <input id="login-email" class="form-control" type="email" placeholder="Email" aria-label="log in email">
             </div>
             <div class="form-group">
-                <input id="log-in-password" class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="log-in-password">
+                <input id="login-password" class="form-control" type="password" placeholder="Password" aria-label="log in password">
             </div>
-            <button id="submit" class="btn btn-primary my-2 my-sm-0" type="submit">Login</button>
+            <button id="login-submit" class="btn btn-primary my-2 my-sm-0" type="submit">Login</button>
         </form>
       </div>
       <div class="modal-footer">
