Added error displays to the log in form

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
         <h1>Bootcamp Instrutor Utilites</h1>
         <hr>
         <p>Login or sign up to get started</p>
-        <button class="btn btn-outline-secondary">Sign Up</button>
+        <a href="/signup" class="btn btn-outline-secondary">Sign Up</a>
         <button class="btn btn-outline-primary" data-toggle="modal" data-target="#login-modal">Login</button>
     </div>
 </div>
