--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -21,6 +21,7 @@
         </button>
       </div>
       <div class="modal-body">
+        <div id="login-alert" class="alert alert-danger" role="alert" style="display:none"></div>
         <form id="login-form">
             <div class="form-group">
                 <input id="login-email" class="form-control" type="email" placeholder="Email" aria-label="log in email">
