--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -24,10 +24,10 @@
         <div id="login-alert" class="alert alert-danger" role="alert" style="display:none"></div>
         <form id="login-form">
             <div class="form-group">
-                <input id="login-email" class="form-control" type="email" placeholder="Email" aria-label="log in email">
+                <input id="login-email" class="form-control" type="email" placeholder="Email" aria-label="log in email" {{#if isDevelopment}}value="test@myuser.com"{{/if}}>
             </div>
             <div class="form-group">
-                <input id="login-password" class="form-control" type="password" placeholder="Password" aria-label="log in password">
+                <input id="login-password" class="form-control" type="password" placeholder="Password" aria-label="log in password" {{#if isDevelopment}}value="test"{{/if}}>
             </div>
             <button id="login-submit" class="btn btn-primary my-2 my-sm-0" type="submit">Login</button>
         </form>
