Commented out code around the import/export feature as it won't be relevent under the database storage approach.

--- a/views/lists.handlebars
+++ b/views/lists.handlebars
@@ -40,14 +40,14 @@
             <div class="mt-4 d-flex">
                 <button id="add-item" class="btn btn-success">Add Item</button>
 
-                <button id="export-list" class="btn btn-secondary ml-auto">Export</button>
-                <button id="import-list" class="btn btn-secondary ml-1">Import</button>
+                {{!-- <button id="export-list" class="btn btn-secondary ml-auto">Export</button>
+                <button id="import-list" class="btn btn-secondary ml-1">Import</button> --}}
             </div>
 
-            <div class="mt-4" id="import-export" style="display: none;">
+            {{!-- <div class="mt-4" id="import-export" style="display: none;">
                 <h2>Import/Export</h2>
                 <textarea class="form-control"></textarea>
-            </div>
+            </div> --}}
         </div>
         <div class="col-md-3 mb-3 mb-md-0">
             <div class="card text-white bg-primary">
