Got basic react compile and load to work

--- a/views/index.html
+++ b/views/index.html
@@ -40,5 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="./js/app.js"></script>
+    <script src="./js/vendors~main.app.js"></script>
   </body>
 </html>
