--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <div class="container text-center">
-        <h1>Bootcamp Instrutor Utilites</h1>
+        <h1>Bootcamp Instructor Utilities</h1>
         <hr>
         <p>Login or sign up to get started</p>
         <a href="/signup" class="btn btn-outline-secondary">Sign Up</a>
