--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,8 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/vendors~main.app.css">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
