Created parts for 'meet the devs ' page. Connect github api requests to fetch users, push them into parts, and then parts fetch user details for display

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,3 +1,7 @@
 @import "~react-bulma-components/src/index.sass";
 
 @import "~bulma/sass/helpers/_all.sass";
+
+.mx-auto
+    margin-left: auto
+    margin-right: auto
