--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -5,3 +5,12 @@
 .mx-auto
     margin-left: auto
     margin-right: auto
+
+
+.has-filled-content,
+.has-filled-content.column
+    display: flex
+    flex-direction: column
+
+    > *
+        flex-grow: 1
