--- a/client/src/pages/Dashboard/parts/Toolbar/style.sass
+++ b/client/src/pages/Dashboard/parts/Toolbar/style.sass
@@ -1,7 +1,18 @@
 .toolbar
+    display: flex
+    flex-direction: column
     position: fixed
     top: 0
     left: 0
     height: 100vh
     width: 55px
-    border-right: 1px solid #e9ebf0 
+    border-right: 1px solid #e9ebf0
+
+    .end
+        margin-top: auto
+
+    .item
+        display: block
+        font-size: 1.5em
+        text-align: center
+        padding: 5px 0
