--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -2,14 +2,40 @@
 
 @import "~bulma/sass/helpers/_all.sass";
 
+
+.mt-auto
+    margin-top: auto
+
+.mr-auto
+    margin-right: auto
+
+.mb-auto
+    margin-bottom: auto
+
+.ml-auto
+    margin-left: auto
+
 .mx-auto
     margin-left: auto
     margin-right: auto
 
+.my-auto
+    margin-top: auto
+    margin-bottom: auto
+
+@for $i from 1 through 10
+  $width: ($i * 10)
+  .mw-#{$width}
+    max-width: percentage($width/100)
+
+.has-shadow,
+.has-img-shadow img
+    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2), 0 0px 0 1px rgba(10, 10, 10, 0.02)
+
 
 .has-filled-content,
-.has-filled-content.column
-    display: flex
+.has-filled-content
+    display: flex !important
     flex-direction: column
 
     > *
