--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -30,7 +30,7 @@
 
 .has-shadow,
 .has-img-shadow img
-    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2), 0 0px 0 1px rgba(10, 10, 10, 0.02)
+    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2), 0 0px 0 1px rgba(10, 10, 10, 0.02) !important
 
 
 .has-filled-content,
