Work on mock up of classroom dashboard layout.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,6 +1,7 @@
 @import "~react-bulma-components/src/index.sass";
 
 @import "~bulma/sass/helpers/_all.sass";
+@import "~bulma/sass/elements/icon.sass";
 
 
 .mt-auto
