Started mockup of Team management page. Refactored data approach. All staff and students will load under the 'Classroom' model.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -29,6 +29,9 @@
   .mw-#{$width}
     max-width: percentage($width/100)
 
+.is-circle
+    border-radius: 290486px
+
 .has-shadow,
 .has-img-shadow img
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2), 0 0px 0 1px rgba(10, 10, 10, 0.02) !important
