--- a/client/src/pages/Dashboard/parts/Toolbar/style.sass
+++ b/client/src/pages/Dashboard/parts/Toolbar/style.sass
@@ -18,7 +18,7 @@ $width: 55px
     .item
         font-size: 1.5em
         text-align: center
-        padding: 8px 0
+        padding: 4px 0
     
         a
             color: #7a7a7a
@@ -28,8 +28,13 @@ $width: 55px
             line-height: 1em
             font-size: 1.1rem
             width: $width - 16px
+            height: $width - 16px
             border-radius: 3px
 
             &:hover
                 background: #f5f5f5
+
+        &.is-active a
+            color: rgba(255,255,255,0.95)
+            background: #067CAC
     
