Created new 'detection' to gather hook utilities that assist with click and viewport detection. Added 'useOutsideClickDispatch' utility to 'detection' library to help with dispatching events when a user clicks outside of an element. Created custom implementation of Bulma dropdowns to assist with location/context based popup menues with custom control buttons.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,11 +1,13 @@
-@import "~react-bulma-components/src/index.sass";
+@import "_variables";
+@import "~bulma/sass/utilities/_all";
 
-@import "~bulma/sass/helpers/_all.sass";
-@import "~bulma/sass/elements/icon.sass";
+@import "~bulma/sass/helpers/_all";
+@import "~bulma/sass/elements/icon";
+@import "~bulma/sass/components/dropdown"
 
 
 .mt-auto
-    margin-top: auto
+    margin-top: auto 
 
 .mr-auto
     margin-right: auto
