Work on team page.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -5,6 +5,8 @@
 @import "~bulma/sass/elements/icon";
 @import "~bulma/sass/components/dropdown"
 
+.has-text-nowrap
+    white-space: nowrap
 
 .mt-auto
     margin-top: auto 
