--- a/client/src/pages/Dashboard/style.sass
+++ b/client/src/pages/Dashboard/style.sass
@@ -1,2 +1,13 @@
 .dashboard-panel
     min-height: 100vh
+
+.card.is-small
+
+    .card-content
+        padding: .75em 1em
+
+.card.button
+    height: auto
+    padding: 0
+    border-radius: 0
+    border: none
