Got basic funcitonality for student picker set up.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -33,6 +33,20 @@
   .mw-#{$width}
     max-width: percentage($width/100)
 
+.is-grid
+    border-top: 1px solid #b5b5b5
+    border-left: 1px solid #b5b5b5
+
+    > *,
+    > .button
+        height: auto
+        border-radius: 0
+        border-top: none
+        border-left: none
+        border-right: 1px solid #b5b5b5
+        border-bottom: 1px solid #b5b5b5
+
+
 .is-circle
     border-radius: 290486px
 
