Work on allowing custom features be added to the top toolbar per view.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -7,6 +7,11 @@
 
 .has-text-nowrap
     white-space: nowrap
+.p-0
+    padding: 0 !important
+
+.m-0
+    margin: 0 !important
 
 .mt-auto
     margin-top: auto 
