--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,9 +1,12 @@
-@import "_variables";
-@import "~bulma/sass/utilities/_all";
+@import "_env"
 
-@import "~bulma/sass/helpers/_all";
-@import "~bulma/sass/elements/icon";
-@import "~bulma/sass/components/dropdown"
+@import "~bulma/sass/base/_all"
+@import "~bulma/sass/elements/_all"
+@import "~bulma/sass/form/_all"
+@import "~bulma/sass/components/_all"
+@import "~bulma/sass/grid/_all"
+@import "~bulma/sass/helpers/_all"
+@import "~bulma/sass/layout/_all"
 
 .has-text-nowrap
     white-space: nowrap
