Bug fix for new icon file.

--- a/client/src/pages/Dashboard/components/Toolbar/style.sass
+++ b/client/src/pages/Dashboard/components/Toolbar/style.sass
@@ -36,5 +36,5 @@ $width: 55px
 
         &.is-active a
             color: rgba(255,255,255,0.95)
-            background: #067CAC
+            background: $primary
     
