Work on 'group by' utility for student management view. Got first example using priority levels to work.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -40,6 +40,8 @@
 
 @for $i from 1 through 10
   $width: ($i * 10)
+  .w-#{$width}
+    width: percentage($width/100)
   .mw-#{$width}
     max-width: percentage($width/100)
 
