--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -62,6 +62,10 @@
 .is-circle
     border-radius: 290486px
 
+.has-shadow-light,
+.has-img-shadow-light img
+    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02) !important
+
 .has-shadow,
 .has-img-shadow img
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2), 0 0px 0 1px rgba(10, 10, 10, 0.02) !important
