Style update to student group list headers. Added new color class options to cards that will add a border top to match the given color class.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -81,3 +81,17 @@
 
 .has-background-clear
     background-color: transparent !important
+
+@media screen and (max-width: 768px)
+    .button.is-icon-only-mobile
+        .icon
+            margin-right: calc(-0.5em - 1px) !important
+
+            + *
+                display: none !important
+
+.card
+    @each $name, $pair in $colors
+        $color: nth($pair, 1)
+        &.is-#{$name}
+            border-top: 4px solid $color
