--- a/app/views/email/welcome.mjml
+++ b/app/views/email/welcome.mjml
@@ -13,13 +13,10 @@
                 Welcome to Classroom!
             </mj-text>
             <mj-text>
-              We are so excited you've decided to take your student management to the next level!
-            </mj-text>
-            <mj-text>
-                Please click the button below to verify your email and get started with your new classroom.
+                [name], we are so excited you've decided to take your student management to the next level! Please click the button below to verify your email and get started with your new classroom.
             </mj-text>
             <mj-button href="[verificationLink]" font-family="Helvetica" background-color="#067CAC" color="white" align="left">
-                This is my email. Let's do this!
+                My email is valid. Enter my classroom!
             </mj-button>
         </mj-column>
     </mj-section>
