--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -66,7 +66,7 @@
         
 
 .is-circle
-    border-radius: 290486px
+    border-radius: 290486px !important
 
 .has-text-inherit
     color: inherit
@@ -104,6 +104,15 @@
         $color: nth($pair, 1)
         &.is-#{$name}
             border-top: 4px solid $color
+
+.dropdown
+    .title
+        text-align: left
+        padding: 0.375rem 1rem
+        margin-bottom: 0
+    &.is-over-btn
+        &.is-up .dropdown-menu
+            bottom: 0
 
 .table
     &.is-vcentered
