--- a/client/src/pages/Dashboard/components/Toolbar/style.sass
+++ b/client/src/pages/Dashboard/components/Toolbar/style.sass
@@ -20,7 +20,7 @@ $width: 55px
         text-align: center
         padding: 4px 0
     
-        a
+        .action
             color: #7a7a7a
             display: block
             margin: 0 auto
@@ -34,7 +34,7 @@ $width: 55px
             &:hover
                 background: #f5f5f5
 
-        &.is-active a
+        &.is-active .action
             color: rgba(255,255,255,0.95)
             background: $primary
     
