Updated toolbar and top bar styles. Added logo to toolbar. Updated classroom icon and removed button from settings page since the logo now servers and a link back to the classroom.

--- a/client/src/pages/Dashboard/components/Toolbar/style.sass
+++ b/client/src/pages/Dashboard/components/Toolbar/style.sass
@@ -19,16 +19,19 @@ $width: 55px
         font-size: 1.5em
         text-align: center
         padding: 4px 0
-    
-        .action
-            color: #7a7a7a
+
+        .action,
+        .action-plain
             display: block
             margin: 0 auto
-            padding: 6px 8px
             line-height: 1em
             font-size: 1.1rem
             width: $width - 16px
             height: $width - 16px
+
+        .action
+            color: #7a7a7a
+            padding: 6px 8px
             border-radius: 3px
 
             &:hover
