--- a/client/src/pages/Dashboard/components/Topbar/style.sass
+++ b/client/src/pages/Dashboard/components/Topbar/style.sass
@@ -4,7 +4,7 @@
     border-bottom: 1px solid #E9EBF0
 
     .item
-        padding: 7px 14px
+        padding: 7px .75rem
         line-height: 42px
         font-size: 20px
 
