Form style updates for user settings page.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -130,3 +130,18 @@
         &.is-#{$name}
             padding-top: .5em
             border-top: 4px solid $color
+
+.is-flat
+    .label
+        margin-bottom: 0
+        font-size: .85rem
+    .input
+        padding-left: 0
+        padding-right: 0
+        background: transparent
+        border-top: none
+        border-right: none
+        border-bottom-width: 2px
+        border-left: none
+        border-radius: 0px
+        box-shadow: none !important
