--- a/client/src/pages/Dashboard/components/Toolbar/style.sass
+++ b/client/src/pages/Dashboard/components/Toolbar/style.sass
@@ -6,6 +6,7 @@ $width: 55px
     display: flex
     flex-direction: column
     position: fixed
+    z-index: 50
     top: 0
     left: 0
     height: 100vh
