--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -7,6 +7,8 @@
 @import "~bulma/sass/grid/_all"
 @import "~bulma/sass/helpers/_all"
 @import "~bulma/sass/layout/_all"
+@import "~bulma-slider/src/sass"
+
 
 .has-text-nowrap
     white-space: nowrap
