Added client validation to registration form. Update to Form component to make 'flat' styling easier.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -139,9 +139,12 @@
             border-top: 4px solid $color
 
 .is-flat
+    .field:not(:last-child)
+        margin-bottom: 1.25rem
     .label
         margin-bottom: 0
         font-size: .85rem
+        line-height: 1em
     .input
         padding-left: 0
         padding-right: 0
