--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -156,6 +156,21 @@
         border-radius: 0px
         box-shadow: none !important
 
+.panel
+    .title
+        margin: 0
+        padding-top: .5em
+        padding-bottom: .5em
+        padding-left: 0.75rem
+        padding-right: 0.75rem
+    .title:first-child
+        border-top-left-radius: $panel-heading-radius
+        border-top-right-radius: $panel-heading-radius
+        // border-bottom: 1px solid #ededed
+
+.modal-content
+    max-width: 90%
+
 input[type="range"]
 	&.slider
         &:not([orient="vertical"])
