--- a/client/src/pages/Dashboard/components/StudentModal/components/ActivityFeed/style.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/components/ActivityFeed/style.sass
@@ -1,6 +1,9 @@
 $feed-border: 1px solid hsl(0,0,90%)
 $feed-border-light: 1px solid hsl(0,0,94%)
-    
+
+.feed
+    font-size: .95rem
+
 .feed-entry
     display: flex
     padding: .75rem 0
