Updated elevation controls on front end. Now handles elevate and deelevate action, but live state updates for aggregate is still in progress.

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -117,6 +117,10 @@
         &.is-#{$name}
             border-top: 4px solid $color
 
+.tag
+    &.is-small
+        font-size: .5rem
+
 .dropdown
     .title
         text-align: left
