--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -103,6 +103,9 @@
                 border-top-right-radius: 0
                 border-bottom-right-radius: 0
 
+.button
+    transition: background-color .3s ease, color .3s ease, border-color .3s ease
+
 @media screen and (max-width: 768px)
     .button.is-icon-only-mobile
         .icon
