Updates for adding in UI for comment updates/deletes - Updated CommentForm to handle updates and creates (Socket feeds and state changes still pending) - Updated Comment entry component to include options for edit and delete if the comment belongs to the current user - Added comment update and delete permissions to TA and Intructor rolls - Updated FeedEntryController.updateOne to map the provided data to the model's data field. **Other** - Updated auth hooks to exclude usage of react-router-dom history to create redirects (redirects should be handled by Guest and Private route componentes

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -107,6 +107,18 @@
 
 .button
     transition: background-color .3s ease, color .3s ease, border-color .3s ease
+    
+    &.is-text-link
+        border: none
+        background: transparent !important
+        color: $primary
+        padding: 0
+        font-size: inherit
+        line-height: inherit
+        height: auto
+
+        .icon:first-child:last-child
+            margin: 0
 
 @media screen and (max-width: 768px)
     .button.is-icon-only-mobile
