--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -3,3 +3,21 @@
 
 .hide-overflow
     overflow: visible
+
+::-webkit-scrollbar 
+  width: 7px
+
+/* Track */
+::-webkit-scrollbar-track 
+  background: #FFFFFF
+  border-radius: 30px
+
+ 
+/* Handle */
+::-webkit-scrollbar-thumb 
+  background: #6e6d6d
+  border-radius: 30px
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover 
+  background: #067CAC
