--- a/client/src/components/Form/components/RichTextEditor/styles.sass
+++ b/client/src/components/Form/components/RichTextEditor/styles.sass
@@ -1,55 +1,59 @@
-.RichEditor-root
+.DraftEditor-root
   background: #fff
   border: 1px solid #ddd
   font-family: "Georgia", serif
   font-size: 14px
   padding: 15px
 
-.RichEditor-editor
+.DraftEditor-editor
   border-top: 1px solid #ddd
   cursor: text
   font-size: 16px
   margin-top: 10px
 
-  .public-DraftEditorPlaceholder-root
-    margin: 0 -15px -15px
-    padding: 15px
+.DraftEditor-editorContainer
+  position: relative
 
-  .public-DraftEditor-content
-    margin: 0 -15px -15px
-    padding: 15px
-    min-height: 100px
+.public-DraftEditor-content
+  padding: 0 15px
+  margin: 0 -15px -15px
+  min-height: 100px
 
-.RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root
+.public-DraftEditorPlaceholder-root
+  padding: 15px
+  position: absolute
+  top: 0
+  left: 0
+
+.DraftEditor-hidePlaceholder .public-DraftEditorPlaceholder-root
   display: none
 
-.RichEditor-editor
-  .RichEditor-blockquote
-    border-left: 5px solid #eee
-    color: #666
-    font-family: "Hoefler Text", "Georgia", serif
-    font-style: italic
-    margin: 16px 0
-    padding: 10px 20px
+.DraftEditor-blockquote
+  border-left: 5px solid #eee
+  color: #666
+  font-family: "Hoefler Text", "Georgia", serif
+  font-style: italic
+  margin: 16px 0
+  padding: 10px 20px
 
-  .public-DraftStyleDefault-pre
-    background-color: rgba(0, 0, 0, 0.05)
-    font-family: "Inconsolata", "Menlo", "Consolas", monospace
-    font-size: 16px
-    padding: 20px
+.public-DraftStyleDefault-pre
+  background-color: rgba(0, 0, 0, 0.05)
+  font-family: "Inconsolata", "Menlo", "Consolas", monospace
+  font-size: 16px
+  padding: 20px
 
-.RichEditor-controls
+.DraftEditor-controls
   font-family: "Helvetica", sans-serif
   font-size: 14px
   margin-bottom: 5px
   user-select: none
 
-.RichEditor-styleButton
+.DraftEditor-styleButton
   color: #999
   cursor: pointer
   margin-right: 16px
   padding: 2px 0
   display: inline-block
 
-.RichEditor-activeButton
+.DraftEditor-activeButton
   color: #5890ff
