Finished changes for basic version of the rich text editor for comments - Updated the `RichTextEditor` to use the `Toolbar` - Added a `useEffect` to watch the editor state and apply it back to the form state as raw content - Updated the `Comment` entry component to print the non string comments with a "read only" editor - Tweaked a few styles to allow a better "read only" display - Updated comment route data validaton to allow raw content object data from draft-js

--- a/client/src/components/Form/components/RichTextEditor/styles.sass
+++ b/client/src/components/Form/components/RichTextEditor/styles.sass
@@ -1,9 +1,5 @@
 .DraftEditor-root
-  background: #fff
-  border: 1px solid #ddd
-  font-family: "Georgia", serif
-  font-size: 14px
-  padding: 15px
+  position: relative
 
 .DraftEditor-editor
   border-top: 1px solid #ddd
@@ -15,8 +11,12 @@
   position: relative
 
 .public-DraftEditor-content
-  padding: 0 15px
-  margin: 0 -15px -15px
+  margin: 0
+
+.public-DraftEditor-content[contenteditable="true"]
+  background: #fff
+  border: 1px solid #ddd
+  padding: 15px
   min-height: 100px
 
 .public-DraftEditorPlaceholder-root
