--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -4,6 +4,10 @@
 .hide-overflow
     overflow: visible
 
+.is-comment-box
+  box-shadow: 0 -8px 12px -2px rgba(0,0,0,0.1)
+  border-left: 1px solid #fafafa !important
+
 ::-webkit-scrollbar 
   width: 7px
 
