modified:   client/src/App.sass     Added not selector to box to ignore boxes that lived inside Student modal
modified:   client/src/pages/Dashboard/components/StudentModal/index.js
    Removed inline styling
    added classes to box to matched removed inline styling

modified:   client/src/pages/Dashboard/components/StudentModal/index.sass
    Created multiple classes to target each box depending the size or width and potions of box

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -97,11 +97,11 @@
 .columns
     &.is-gapless
         .column:not(:first-child)
-            > .box
+            > .box:not(.is-edit-student-id):not(.is-activity-feed):not(.is-comment-box)
                 border-top-left-radius: 0
                 border-bottom-left-radius: 0
         .column:not(:last-child)
-            > .box
+            > .box:not(.is-edit-student-id):not(.is-activity-feed):not(.is-comment-box)
                 border-top-right-radius: 0
                 border-bottom-right-radius: 0
 
