--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -4,6 +4,9 @@
 .hide-overflow
     overflow: visible
 
+.is-column-has-ratio
+     height: 90%
+
 .is-comment-box
   box-shadow: 0 -8px 12px -2px rgba(0,0,0,0.1)
   border-left: 1px solid #fafafa !important
@@ -35,9 +38,17 @@
 .is-activity-feed-column
   overflow: "hidden"
   border-top-right-radius: 0
+  height: 90%
   .is-activity-feed
     border-radius: 0
     height: 100%
+
+.is-comment-button
+  border-radius: 0
+  border-left-style: none
+  border-right-style: none
+  border-bottom-left-radius: 6px
+  border-bottom-right-radius: 6px
 
 
 ::-webkit-scrollbar 
@@ -70,8 +81,8 @@
     border-bottom-right-radius: 0px
 
   .is-activity-feed-column
-    overflow: "hidden"
     border-top-right-radius: 6px
+    height: 95%
     .is-activity-feed
       border-top-right-radius: 6px
   
@@ -81,3 +92,9 @@
   
   .is-comment-box
     border-bottom-left-radius: 0px
+
+  .is-column-has-ratio
+     height: 95%
+
+  .is-comment-button
+    border-bottom-left-radius: 0
