new file:   client/src/pages/Dashboard/components/StudentModal/components/StudentModalTabs.js     Removed Tabs from client/src/pages/Dashboard/components/StudentModal/index.js amd created a component, which anyone can add more tabs if needed wanted to
modified:   client/src/pages/Dashboard/components/StudentModal/index.js
    Removed Tabs and Tab from import, and moved tabs to be its own component
    Removed activityTab and ediStudentTab state and added selectedTab state to only accept a string matching the name of active tab
    Updated setTabs to set the selected tab by sending the name of tab
    Created a list of tabs to be pass to Student tabs
    Created windowBreakPoint variable to be able to modified breakpoint from one spot

modified:   client/src/pages/Dashboard/components/StudentModal/index.sass
   Change some of the naming conventions to match the element they are targeting

renamed and moved :   client/src/pages/Dashboard/components/StudentModal/utils.js -> client/src/utils/windowWidth.js

--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -4,7 +4,7 @@
 .hide-overflow
     overflow: visible
 
-.is-column-has-ratio
+.is-edit-student-column
      height: 90%
 
 .is-comment-box
@@ -75,10 +75,11 @@
       display: none
 
   .is-edit-student-id
-    border-radius: 0
     border-top-left-radius: 6px
-    border-bottom-left-radius: 6px
     border-bottom-right-radius: 0px
+
+  .is-edit-student-column
+     height: 95%
 
   .is-activity-feed-column
     border-top-right-radius: 6px
@@ -93,8 +94,7 @@
   .is-comment-box
     border-bottom-left-radius: 0px
 
-  .is-column-has-ratio
-     height: 95%
+  
 
   .is-comment-button
     border-bottom-left-radius: 0
