Created `fullScreen` option for `ModalBox` - Helps apply needed classes for the "full screen" size - Eliminated need for `contentProps` in `StudentModal`

--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -18,6 +18,11 @@
   border-bottom-right-radius: 6px
   
 .is-student-modal
+  &.is-fullscreen
+    .modal-content
+      width: 100%
+      height: 800px
+
   .is-tabs
     display: block
     padding-bottom: 0
