Refactored `StudentModal` to use the panel config from `usePanels` as a base for display - Migrate `StudentModalTabs` to panels and renamed `PanelTabs`. Component was updated to fit panelConfig props. - Create new memo to filter the "active" tabs for display - Refactored modal columns to rely on the active tabs for rendering - some styles and class names tweaked to best fit new changes.

--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -4,7 +4,7 @@
 .hide-overflow
     overflow: visible
 
-.is-edit-student-column
+.is-student-column
      height: 90%
 
 .is-comment-box
@@ -40,7 +40,7 @@
   border-bottom-left-radius: 6px
   border-bottom-right-radius: 6px
 
-.is-activity-feed-column
+.is-activity-column
   overflow: "hidden"
   border-top-right-radius: 0
   height: 90%
@@ -83,10 +83,10 @@
     border-top-left-radius: 6px
     border-bottom-right-radius: 0px
 
-  .is-edit-student-column
+  .is-student-column
      height: 95%
 
-  .is-activity-feed-column
+  .is-activity-column
     border-top-right-radius: 6px
     height: 95%
     .is-activity-feed
