Package Updates **Server:** - concurrently@6.0.2 -> 6.1.0 - mocha@8.3.2 -> 8.4.0 - @sendgrid/mail@7.4.2 -> 8.4.0 - dotenv@8.2.0 -> 9.0.2 - fastest-validator@1.10.1 -> 1.11.0 - mjml@4.9.0 -> 4.9.3 - mongoose@5.12.5 -> 5.12.8 - nodemailer@6.5.0 -> 6.6.0 - socket.io@4.0.1 -> 4.1.1
**Client:**

- react-bulma-components@3.4.0 -> 4.0.3 (Required some minor corrections)
- socket.io-client@4.0.1 -> 4.1.1
- workbox-core@5.1.4 -> 6.1.5
- workbox-precaching@5.1.4 -> 6.1.5
- workbox-routing@5.1.4 -> 6.1.5
- workbox-strategies@5.1.4 -> 6.1.5

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -95,7 +95,7 @@
     background-color: transparent !important
 
 .columns
-    &.is-gapless
+    &.is-0
         .column:not(:first-child)
             > .box:not(.is-edit-student-id):not(.is-activity-feed):not(.is-comment-box)
                 border-top-left-radius: 0
