--- a/client/src/pages/Dashboard/components/StudentModal/index.sass
+++ b/client/src/pages/Dashboard/components/StudentModal/index.sass
@@ -5,7 +5,8 @@
     overflow: visible
 
 .is-student-column
-     height: 90%
+  padding-top: 0
+  height: 90%
 
 .is-comment-box
   box-shadow: 0 -8px 12px -2px rgba(0,0,0,0.1)
@@ -44,6 +45,7 @@
   overflow: "hidden"
   border-top-right-radius: 0
   height: 90%
+  padding-top: 0
   .is-activity-feed
     border-radius: 0
     height: 100%
