--- a/client/src/pages/Dashboard/components/StudentCard/style.sass
+++ b/client/src/pages/Dashboard/components/StudentCard/style.sass
@@ -1,3 +1,5 @@
+@import "_env"
+
 .student-card
     > .tags,
     > .tags .tag
@@ -6,3 +8,30 @@
 
 .student-name
     cursor: pointer
+
+.circle-checkbox
+    -webkit-appearance: none
+    background-color: #fafafa
+    border: 1px solid #cacece
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05)
+    padding: 9px
+    border-radius: 10px
+    display: inline-block
+    position: relative
+
+.circle-checkbox:active, .circle-checkbox:checked:active
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1)
+
+.circle-checkbox:checked
+    background-color: #e9ecee
+    border: 1px solid #adb8c0
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1)
+    color: #99a1a7
+
+.circle-checkbox:checked:after
+    content: '\25CF'
+    font-size: 20px
+    position: absolute
+    top: -7px
+    left: 3px
+    color: #99a1a7
