--- a/client/src/pages/Dashboard/components/StudentCard/style.sass
+++ b/client/src/pages/Dashboard/components/StudentCard/style.sass
@@ -35,3 +35,7 @@
     top: -7px
     left: 3px
     color: $cyan
+
+.box-shadow
+    -webkit-box-shadow: 0px 0px 5px 5px $cyan
+    box-shadow: 0px 0px 5px 5px $cyan
