--- a/client/src/pages/Dashboard/components/StudentCard/style.sass
+++ b/client/src/pages/Dashboard/components/StudentCard/style.sass
@@ -28,14 +28,17 @@
     box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1)
     color: #99a1a7
 
-.circle-checkbox:checked:after
-    content: '\25CF'
-    font-size: 20px
+.circle-checkbox:checked::after
+    content: ""
+    background: $cyan
+    height: 10px
+    width: 10px
+    border-radius: 10px
     position: absolute
-    top: -7px
-    left: 3px
-    color: $cyan
+    left: 50%
+    top: 50%
+    transform: translate(-50%, -50%)
 
 .box-shadow
-    -webkit-box-shadow: 0px 0px 5px 5px $cyan
-    box-shadow: 0px 0px 5px 5px $cyan
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(52,152,219,0.5)
+    box-shadow: 0px 0px 5px 5px rgba(52,152,219,0.5)
